# tswow

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .mocharc.json  .pre-commit-config.yaml  .swcrc  CMakeLists.txt  README.md  build-config.js  build.conf  build.default.conf  build.js  build.yaml  package-lock.json  package.install.json  package.json  separate_dbs.default.yaml  start.js  tswow.default.yaml
.vscode-install/: settings.json
ClientExtensions/: .gitignore  CMakeLists.txt  ClientArguments.cpp  ClientDetours.cpp  ClientDetours.h  ClientLua.cpp  ClientLua.h  ClientNetwork.lua  DetourRegistry.cpp  DetourRegistry.h  LICENSE  Logger.cpp  Logger.lua  Main.cpp  Registry.h  TestModule.cpp  client_header_builder.cpp  lua_builder_client.cpp  test.lua
ClientExtensions/ClientExtensions/: CMakeLists.txt  ClientArguments.h  ClientDetours.cpp  ClientDetours.h  ClientLua.cpp  ClientLua.h  ClientMPQ.cpp  ClientMPQ.h  ClientMacros.h  ClientNetwork.cpp  ClientNetwork.h  ClientNetwork.lua  FSRoot.cpp  Main.cpp  MyExtraModule.cpp  TestModule.cpp  client_header_builder.cpp  lua.hpp
ClientExtensions/CustomPackets/: CMakeLists.txt  CustomPacketBase.cpp  CustomPacketBase.h  CustomPacketBuffer.cpp  CustomPacketBuffer.h  CustomPacketChunk.cpp  CustomPacketChunk.h  CustomPacketDefines.h  CustomPacketRead.cpp  CustomPacketRead.h  CustomPacketWrite.cpp  CustomPacketWrite.h
ClientExtensions/messages/: CMakeLists.txt  MessageBase.cpp  MessageBase.h  MessageBuffer.cpp  MessageBuffer.h  MessageChunk.cpp  MessageDefines.h  MessageRead.h  MessageWrite.h
ClientExtensions/tests/: CMakeLists.txt  CustomPacket.cpp  CustomPacketBuffer.cpp  CustomPacketChunk.cpp  CustomPacketNumbers.cpp  MessageBuffer.cpp  MessageChunk.cpp  Messages.cpp
client-extensions/: CMakeLists.txt  README.md
client-extensions/CustomPackets/: CMakeLists.txt  CustomPacketBase.cpp  CustomPacketBase.h  CustomPacketBuffer.cpp  CustomPacketChunk.h  CustomPacketDefines.h  CustomPacketRead.cpp  CustomPacketWrite.cpp
data/: index.ts  tsconfig.json  tswow-stdlib-data.ts
datalib/: index.ts
datascripts/: datascripts.conf  datascripts.ts  (+2 more)
messages-lua/: .gitignore  Arguments.cpp  Arguments.h  CMakeLists.txt  MessageLuaRegistry.cpp  MessageLuaRegistry.h  MessageStore.cpp  MessageStore.h  build_lua_header.cpp  lua.hpp  messages.lua  messages.lua.h
misc/blpconverter/: CMakeLists.txt  CREDITS  main.cpp
misc/blpconverter/blp2png/: BlpConvert.cpp  BlpConvert.h
misc/blpconverter/include/libtxc_dxtn/: txc_dxtn.h
misc/blpconverter/include/pngpp/: error.hpp
misc/blpconverter/png2blp/: GaussFiltering.cpp  GaussFiltering.h  MipMapGenerator.cpp  Png2Blp.cpp  PngReader.h  Quantizer.h
misc/client-extensions/: CMakeLists.txt
misc/client-extensions/ClientExtensions/: CMakeLists.txt  ClientArguments.cpp  ClientArguments.h  ClientDB.cpp  ClientDB.h  ClientDBCLoader.cpp  ClientDBCLoader.h  ClientDetours.cpp  ClientDetours.h  ClientExtensions.cpp  ClientExtensions.h  ClientLua.cpp  ClientLua.h  ClientMPQ.cpp  ClientMPQ.h  ClientMisc.cpp  ClientNetwork.cpp  ClientNetwork.lua  Logger.cpp  Logger.h  Main.cpp  SharedDefines.h  Util.cpp  Util.h  client_header_builder.cpp
misc/client-extensions/ClientExtensions/CDBCMgr/: CDBC.cpp  CDBC.h  CDBCMgr.cpp  CDBCMgr.h
misc/client-extensions/ClientExtensions/CDBCMgr/CDBCDefs/: LFGRoles.h  SpellAdditionalAttributes.h  SpellAdditionalCostData.h  SpellEffectScalars.h  ZoneLight.h  ZoneLightPoint.h
misc/client-extensions/ClientExtensions/Camera/: CVar.cpp  WorldSpace.cpp
misc/client-extensions/ClientExtensions/Character/: CharacterDefines.h  CharacterExtensions.cpp  CharacterExtensions.h  CharacterFixes.cpp  CharacterFixes.h
misc/client-extensions/ClientExtensions/Characters/: CharacterDefines.h  CharacterExtensions.cpp  CharacterExtensions.h  CharacterFixes.cpp  ClientCharacterDefines.h  ClientCharacterFixes.cpp  ClientCharacterFixes.h
misc/client-extensions/ClientExtensions/CustomDBCMgr/: ClientDB.cpp  ClientDB.h  CustomDBC.cpp  CustomDBC.h  CustomDBCMgr.cpp  CustomDBCMgr.h
misc/client-extensions/ClientExtensions/CustomDBCMgr/DBCDefs/: SpellAdditionalAttributes.h  SpellAdditionalCostData.cpp  SpellAdditionalCostData.h  SpellCustomAttributes.h
misc/client-extensions/ClientExtensions/CustomLua/: CustomDBCFunctions.cpp  PlayerFunctions.cpp  SpellFunctions.cpp  UIFunctions.cpp
misc/client-extensions/ClientExtensions/CustomLua/CharCreate/: CharCreateDefines.h  CharCreateFunctions.cpp
misc/client-extensions/ClientExtensions/Misc/: MiscFixes.cpp  MiscFixes.h
misc/client-extensions/ClientExtensions/Spells/: Spells.cpp  Spells.h
misc/client-extensions/ClientExtensions/Tooltip/: ClientTooltipDefines.h  ClientTooltipExtensions.cpp  ClientTooltipExtensions.h  SpellTooltipExtensions.cpp  SpellTooltipExtensions.h  TooltipDefines.h
misc/client-extensions/ClientExtensions/World/: WorldData.cpp  WorldData.h
misc/client-extensions/CustomDBCMgr/: CMakeLists.txt  CustomDBC.cpp  CustomDBC.h  CustomDBCDefines.h
misc/client-extensions/CustomPackets/: CMakeLists.txt  CustomPacketBase.cpp  CustomPacketBase.h  CustomPacketBuffer.cpp  CustomPacketBuffer.h  CustomPacketDefines.h  CustomPacketRead.h  CustomPacketWrite.h
misc/client-extensions/lua-5.1/src/: luaconf.h
misc/client-extensions/tests/: CMakeLists.txt  CustomPacket.cpp  CustomPacketBuffer.cpp  CustomPacketChunk.cpp  FuzzTests.cpp
misc/mpqbuilder/: CMakeLists.txt  luaxmlreader.cpp
mpqbuilder/: CMakeLists.txt  MiniFS.h  luaxmlreader.cpp  mpqbuilder.cpp
mpqbuilder/cmake/: FindStormLib.cmake
tests/: CMakeLists.txt  ClientArguments.cpp  Lua.cpp  MessageBuffer.cpp
tools/blpconverter/: CMakeLists.txt
tools/blpconverter/blp2png/: BlpConvertException.cpp  BlpConvertException.h  BlpStructure.h  ByteStream.cpp  ByteStream.h
tools/blpconverter/include/libimagequant/: libimagequant.h
tools/blpconverter/include/libtxc_dxtn/: txc_compress_dxtn.c  txc_fetch_dxtn.c
tools/blpconverter/png2blp/: BinaryWriter.cpp  BinaryWriter.h  MipMapGenerator.h  Png2Blp.h  PngReader.cpp  Quantizer.cpp
(+3048 files in other folders)
